--- a/Python/price_elasticity_demand/price_elasticity_data_cleaning.ipynb
+++ b/Python/price_elasticity_demand/price_elasticity_data_cleaning.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "92159a76",
    "metadata": {
     "execution": {
@@ -116,12 +116,14 @@
    "outputs": [],
    "source": [
     "# df = pd.read_csv('DatafinitiElectronicsProductsPricingData.csv')\n",
-    "df = pd.read_csv('../input/electronic-products-prices/DatafinitiElectronicsProductsPricingData.csv')"
+    "import os\n",
+    "os.chdir(\"C:\\\\Users\\\\alwar\\\\Documents\\\\Datascience\\\\Python\\\\price_elasticity_demand\\\\dataset\")\n",
+    "df = pd.read_csv('DatafinitiElectronicsProductsPricingData.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "fcd60793",
    "metadata": {
     "execution": {
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ad488ccd",
    "metadata": {
     "execution": {
@@ -359,7 +361,7 @@
        "1         NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "843de2d4",
    "metadata": {
     "execution": {
@@ -552,7 +554,7 @@
        "data_type        object      object  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "abb0ec4d",
    "metadata": {
     "execution": {
@@ -598,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ba7acd56",
    "metadata": {
     "execution": {
@@ -653,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3195597d",
    "metadata": {
     "execution": {
@@ -686,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "dd3090ad",
    "metadata": {
     "execution": {
@@ -736,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "cc023899",
    "metadata": {
     "execution": {
@@ -771,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "829ac53a",
    "metadata": {
     "execution": {
@@ -812,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "e7094937",
    "metadata": {
     "execution": {
@@ -840,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "590f9a35",
    "metadata": {
     "execution": {
@@ -872,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "c12295c2",
    "metadata": {
     "execution": {
@@ -948,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "73b1fd3b",
    "metadata": {
     "execution": {
@@ -969,12 +971,12 @@
    "outputs": [],
    "source": [
     "# category_name = pd.read_csv('DatafinitiElectronicsProductsPricingData_with_category.csv')\n",
-    "category_name = pd.read_csv('../input/electronic-product-with-category/DatafinitiElectronicsProductsPricingData_with_category.csv')"
+    "category_name = pd.read_csv('DatafinitiElectronicsProductsPricingData_with_category.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "d35530ca",
    "metadata": {
     "execution": {
@@ -1000,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "55927036",
    "metadata": {
     "execution": {
@@ -1036,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "4fd8eac3",
    "metadata": {
     "execution": {
@@ -1064,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "5620bd28",
    "metadata": {
     "execution": {
@@ -1089,7 +1091,7 @@
     "Sub_df['Day'] = Sub_df['Date'].dt.day\n",
     "Sub_df['Month'] = Sub_df['Date'].dt.month\n",
     "Sub_df['Year'] = Sub_df['Date'].dt.year\n",
-    "Sub_df['Week'] = Sub_df['Date'].dt.week\n",
+    "Sub_df['Week'] = Sub_df['Date'].dt.dayofweek\n",
     "Sub_df['Month_Name'] = Sub_df['Date'].dt.strftime('%B')\n",
     "Sub_df['Day_Name'] = Sub_df['Date'].dt.strftime('%A')\n",
     "Sub_df['Formatted_date'] = pd.to_datetime(Sub_df['Date'].dt.date)"
@@ -1097,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "b31b3b3c",
    "metadata": {
     "execution": {
@@ -1123,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "86626507",
    "metadata": {
     "execution": {
@@ -1149,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "45c632da",
    "metadata": {
     "execution": {
@@ -1266,10 +1268,10 @@
        "      <td>object</td>\n",
        "      <td>float64</td>\n",
        "      <td>int64</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>int64</td>\n",
+       "      <td>int32</td>\n",
+       "      <td>int32</td>\n",
+       "      <td>int32</td>\n",
+       "      <td>int32</td>\n",
        "      <td>object</td>\n",
        "      <td>object</td>\n",
        "      <td>datetime64[ns]</td>\n",
@@ -1295,14 +1297,14 @@
        "\n",
        "            weight_in_kg Impression    Day  Month   Year   Week Month_Name  \\\n",
        "Null value%     0.452303        0.0    0.0    0.0    0.0    0.0        0.0   \n",
-       "data_type        float64      int64  int64  int64  int64  int64     object   \n",
+       "data_type        float64      int64  int32  int32  int32  int32     object   \n",
        "\n",
        "            Day_Name  Formatted_date Disc_Per Total_sale  \n",
        "Null value%      0.0             0.0      0.0        0.0  \n",
        "data_type     object  datetime64[ns]  float64    float64  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "d611273d",
    "metadata": {
     "execution": {
@@ -1342,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "441120ff",
    "metadata": {
     "execution": {
@@ -1368,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "23ba43f8",
    "metadata": {
     "execution": {
@@ -1409,7 +1411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.11.5"
   },
   "papermill": {
    "default_parameters": {},
