--- a/Python/Lupin_Triglycerides/triglycerides.ipynb
+++ b/Python/Lupin_Triglycerides/triglycerides.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +20,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
-    "os.chdir(\"C:\\\\Users\\\\alwar\\\\OneDrive\\\\Documents\\\\Code\\\\Datascience\\\\Python\\\\Lupin_Triglycerides\\\\dataset\")"
+    "os.chdir(\"C:\\\\Users\\\\alwar\\\\Documents\\\\Datascience\\\\Python\\\\Lupin_Triglycerides\\\\dataset\")\n",
+    "os.curdir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +311,7 @@
        "max           911.000000         659.000000        500.000000  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
